--- a/src/KimaiDotNet.oDataReporting.oDataService/appsettings.json
+++ b/src/KimaiDotNet.oDataReporting.oDataService/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Kimai": {
+    "Username": "",
+    "Password": "",
+    "Url": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
