Finish hooking up the data to the Kimai API

--- a/src/KimaiDotNet.oDataReporting.oDataService/appsettings.json
+++ b/src/KimaiDotNet.oDataReporting.oDataService/appsettings.json
@@ -2,7 +2,7 @@
   "Kimai": {
     "Username": "",
     "Password": "",
-    "Url": ""
+    "Url": "https://demo-plugins.kimai.org"
   },
   "Logging": {
     "LogLevel": {
