Tidy up namespaces and using

--- a/src/KimaiDotNet.oDataReporting.oDataService/Properties/launchSettings.json
+++ b/src/KimaiDotNet.oDataReporting.oDataService/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "KimaiDotNet.oDataReporting.oDataService": {
+    "KimaiDotNet.Reporting.ODataService": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
