--- a/src/KimaiDotNet.Reporting.ODataService/KimaiDotNet.Reporting.ODataService.csproj
+++ b/src/KimaiDotNet.Reporting.ODataService/KimaiDotNet.Reporting.ODataService.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.OpenApi.OData" Version="1.0.6" />
     <PackageReference Include="MonkeyCache.LiteDB" Version="1.5.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.5" />
+    <PackageReference Include="CsvHelper" Version="27.1.0" />
   </ItemGroup>
 
 </Project>
