--- a/src/KimaiDotNet.Reporting.ODataService/KimaiDotNet.Reporting.ODataService.csproj
+++ b/src/KimaiDotNet.Reporting.ODataService/KimaiDotNet.Reporting.ODataService.csproj
@@ -12,6 +12,8 @@
   <ItemGroup>
     <PackageReference Include="MarkZither.KimaiDotNet.ApiClient" Version="0.4.0-beta0001" />
     <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.1" />
     <PackageReference Include="Microsoft.OpenApi.OData" Version="1.0.9" />
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.22" />
     <PackageReference Include="MonkeyCache.LiteDB" Version="1.5.2" />
