--- a/src/KimaiDotNet.Reporting.ODataService/KimaiDotNet.Reporting.ODataService.csproj
+++ b/src/KimaiDotNet.Reporting.ODataService/KimaiDotNet.Reporting.ODataService.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.22" />
     <PackageReference Include="MonkeyCache.LiteDB" Version="1.5.2" />
     <PackageReference Include="MonkeyCache.FileStore" Version="1.5.2" />
+    <PackageReference Include="Polly.Contrib.Simmy" Version="0.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="CsvHelper" Version="27.2.1" />
   </ItemGroup>
