--- a/src/KimaiDotNet.Reporting.ODataService/KimaiDotNet.Reporting.ODataService.csproj
+++ b/src/KimaiDotNet.Reporting.ODataService/KimaiDotNet.Reporting.ODataService.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Polly.Contrib.Simmy" Version="0.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="CsvHelper" Version="27.2.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
 </Project>
